guardando matriz de viaje a bibliotecas desde municipio de madrid

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 rawEurostat/
 populationData/eurostat2021_censusGRID/
 populationData/Eurostat_Census-GRID_2021_V2.2.zip
+Barrios.zip
+muni2024.zip
+osmData/madrid.osm.pbf
+
